# cofd-miner

./: .gitignore  .gitmodules  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6szw22mfqz0zscygjsa6pzwdhcqdyn8j-source  8h85q1d9mq698r77gjjmpl7yqsd65m5g-source  8k2lvsf2pkj3r7q3q2z9iyvqqxcfn21y-source  s8b0bn7y7jvhijyj8c85z6hjianmc4m7-source  swm3xpy5f0dp28w3gc9yj5yh24wg78ab-source
.github/workflows/: rust.yml
codex-scraper/: Cargo.toml
codex-scraper/examples/: scrape.rs
codex-scraper/src/: gifts.rs  lib.rs
cofd-meta/: Cargo.toml
cofd-meta-schema/: Cargo.toml
cofd-meta-schema/src/: lib.rs  page_kind.rs
cofd-meta/src/: lib.rs
cofd-miner/: Cargo.toml  build.rs
cofd-miner/examples/: pdf-extract.rs  test.rs
cofd-miner/src/: lib.rs  parse.rs  parser_item.rs  source.rs
cofd-miner/src/backend/: lopdf.rs  mod.rs  mupdf.rs
cofd-miner/src/parse/: gift.rs  item.rs  merit.rs  mod.rs
cofd-miner/tests/: pdf_extract.rs  test.rs
cofd-pdf-extract/: Cargo.toml
cofd-pdf-extract/src/: def.rs  lib.rs  main.rs  meta.rs  page_kind.rs  source.rs  source_file.rs
cofd-pdf-extract/src/backend/: mod.rs  mupdf.rs
cofd-schema/: Cargo.toml
cofd-schema/src/: book.rs  dice_pool.rs  dot_range.rs  error.rs  lib.rs  merit.rs  modifiers.rs  prerequisites.rs  traits.rs
cofd-schema/src/item/: gift.rs  merit.rs  mod.rs  spell.rs
cofd-schema/src/splat/: mage.rs  mod.rs  werewolf.rs
cofd-schema/src/traits/: attribute.rs  mod.rs  skill.rs
crates/codex-scraper/: Cargo.toml
crates/codex-scraper/examples/: scrape.rs
crates/codex-scraper/src/: gifts.rs  lib.rs  merits.rs
crates/cofd-meta/src/: page_kind.rs
crates/cofd-miner/: build.rs
crates/cofd-miner/src/: error.rs
crates/cofd-miner/src/backend/: mupdf.rs
crates/cofd-miner/src/parse/: gift.rs  item.rs
crates/cofd-miner/tests/: test.rs
crates/meta/: Cargo.toml
crates/meta-editor/: Cargo.toml
crates/meta-editor/src/: main.rs
crates/meta/src/: lib.rs
crates/miner/: Cargo.toml  build.rs
crates/miner/examples/: llm.rs  pdf-extract.rs  req.rs  test.rs
crates/miner/src/: hash.rs  lib.rs  source.rs
crates/miner/src/backend/: lopdf.rs  mod.rs  mupdf.rs
crates/miner/src/parse/: gift.rs  item.rs  merit.rs  mod.rs
crates/miner/tests/: pdf_extract.rs
llm/: llm.py  llm.sh  schema.json  test.py
meta/: Chronicles of Darkness 2e - Hurt Locker.json  Chronicles of Darkness 2e.json  Demon the Descent.json  Hurt Locker.json  Mage the Awakening 2e - Signs of Sorcery.json  Mage the Awakening 2e.json  Signs of Sorcery.json  Vampire the Requiem 2e.json  Werewolf the Forsaken 2e.json
meta-editor/: Cargo.toml
meta-editor/src/: main.rs
src/: def.rs  hash.rs  main.rs  page_kind.rs  source_file.rs
src/py/: extract_text.py
src/schema/: mod.rs  prerequisites.rs
