[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
cofd-miner = { path = "crates/cofd-miner" }
cofd-meta = { path = "crates/cofd-meta" }
cofd-schema = { git = "https://github.com/m00nwtchr/cofd.git", rev = "b06c28bd560eae54e77919c0ab6625fa9dcbf902" }

strum = "0.26"
regex = "1.10"
itertools = "0.12"

log = "0.4"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"

serde = "1"
serde_json = "1"
rmp-serde = "1"

[profile.release-lto]
inherits = "release"
lto = true