[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["m00n"]
edition = "2021"
license = "MPL"

[workspace.metadata.crane]
name = "cofd-miner"

[workspace.dependencies]
cofd-miner = { path = "crates/miner" }
cofd-meta = { path = "crates/meta" }
cofd-schema = { git = "https://github.com/m00nwtchr/cofd.git", features = ["json_schema"] }

strum = "0.26"
regex = "1.10"
itertools = "0.12"

log = "0.4"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1"

serde = "1"
serde_json = "1"
rmp-serde = "1"

[profile.release]
codegen-units = 1
lto = "fat"
