[package]
name = "codex-scraper"
version = "0.1.0"
edition = "2021"

[[example]]
name = "scrape"

[features]

[dependencies]
cofd-schema.workspace = true

reqwest = "0.11"
scraper = "0.18"

log.workspace = true
anyhow.workspace = true
itertools = "0.11"
convert_case = "0.6"

tokio = { version = "1.33.0", features = ["rt", "macros"] }
