[package]
name = "cofd-miner"
version = "0.1.0"
edition = "2021"
default-run = "pdf-extract"

[[bin]]
name = "meta-editor"
path = "src/bin/meta_editor.rs"
required-features = ["meta_editor"]

[[bin]]
name = "pdf-extract"
path = "src/bin/pdf-extract.rs"
required-features = ["pdf_extract"]

[features]
default = ["mupdf"]
mupdf = ["dep:mupdf"]
# lopdf = ["dep:lopdf"]

meta_editor = [
    "dep:eframe",
    "dep:egui_extras",
    "dep:env_logger",
    "dep:serde_json",
]
pdf_extract = ["dep:walkdir", "dep:env_logger", "dep:serde_json"]

[dependencies]
cofd-schema.workspace = true
cofd-meta.workspace = true

mupdf = { version = "0.4", default-features = false, optional = true, features = [
    "sys-lib",
] }
# lopdf = { version = "0.31", optional = true }

strum.workspace = true
lazy_static = "1"
rayon = "1.7"

convert_case = "0.6"
highway = "1.1.0"
regex = "1.8"

serde.workspace = true
rmp-serde.workspace = true

log.workspace = true
anyhow.workspace = true
thiserror.workspace = true

###
walkdir = { version = "2", optional = true }
env_logger = { version = "0.10", optional = true }
serde_json = { version = "1", optional = true }

### Meta Editor Deps
eframe = { version = "0.23", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.23", optional = true }

[build-dependencies]
cofd-meta.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
