[package]
name = "cofd-miner"
version = "0.1.0"
edition.workspace = true

[features]
default = ["mupdf", "embed_meta"]
embed_meta = ["dep:serde_json", "dep:rmp-serde", "dep:cofd-meta"]

mupdf = ["dep:mupdf"]
# lopdf = ["dep:lopdf"]

[dependencies]
cofd-schema.workspace = true
cofd-meta.workspace = true

mupdf = { version = "0.4", default-features = false, optional = true, features = [
    "sys-lib",
] }
# lopdf = { version = "0.31", optional = true }

strum.workspace = true
lazy_static = "1"
rayon = "1.8"

convert_case = "0.6"
highway = "1.1.0"
regex.workspace = true
itertools.workspace = true

log.workspace = true
anyhow.workspace = true
thiserror.workspace = true

serde = { workspace = true, features = ["derive"] }
rmp-serde = { workspace = true, optional = true }

[build-dependencies]
anyhow.workspace = true
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
cofd-meta = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
walkdir = "2"
similar-asserts = "1.5"