[package]
name = "cofd-pdf-extract"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mupdf = { version = "0.4", default-features = false }

rayon = "1.7"
log = "0.4"
env_logger = "0.10"

fasthash = { version = "0.4" }
regex = "1.8"
# once_cell = "1.18"
lazy_static = "1"

walkdir = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
thiserror = "1"

cofd-schema = { path = "../cofd-schema" }

# [dependencies.lopdf]
# # version = "0.31"
# git = "https://github.com/m00nwtchr/lopdf.git"
# branch = "unicode"
# # path = "./lopdf"
