[package]
name = "cofd-schema"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

chrono = { version = "0.4", features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
derive_more = { version = "0.99", default-features = false, features = ["display"] }

itertools.workspace = true