[package]
name = "meta-editor"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
cofd-meta.workspace = true
cofd-miner = { path = "../cofd-miner", default-features = false, features = ["mupdf"] }
cofd-schema.workspace = true
anyhow.workspace = true

eframe = { version = "0.25", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.25" }

env_logger = { version = "0.10" }

serde.workspace = true
serde_json.workspace = true
regex.workspace = true