[package]
name = "codex-scraper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cofd-schema.workspace = true

reqwest = "0.11"
scraper = "0.19"

log.workspace = true
anyhow.workspace = true
itertools.workspace = true
convert_case = "0.6"

ron = "0.8"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
