[package]
name = "meta-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cofd-meta.workspace = true
cofd-miner = { path = "../miner", default-features = false, features = ["mupdf"] }
cofd-schema.workspace = true
anyhow.workspace = true

eframe = { version = "0.25", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_extras = { version = "0.25" }

env_logger = { version = "0.10" }

serde.workspace = true
serde_json.workspace = true
regex.workspace = true